Hadoop MapReduce Change Log

Branch YARN-2928: Timeline Server Next Generation: Phase 1

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-6327. Made MR AM use timeline service v2 API to write history
    events and counters. (Junping Du via zjshen)

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Trunk (Unreleased)

  INCOMPATIBLE CHANGES

    MAPREDUCE-5785. Derive heap size or mapreduce.*.memory.mb automatically.
    (Gera Shegalov and Karthik Kambatla via gera)

    MAPREDUCE-5653. DistCp does not honour config-overrides for
    mapreduce.[map,reduce].memory.mb (Ratandeep Ratti via aw)

    MAPREDUCE-4424. 'mapred job -list' command should show the job name
    as well. (Avinash Kujur via aajisaka)

    MAPREDUCE-6336. Enable v2 FileOutputCommitter by default.
    (Siqi Li via gera)

  NEW FEATURES

    MAPREDUCE-778. Rumen Anonymizer. (Amar Kamat and Chris Douglas via amarrk)

    MAPREDUCE-2669. Add new examples for Mean, Median, and Standard Deviation.
    (Plamen Jeliazkov via shv)

    MAPREDUCE-4887. Add RehashPartitioner, to smooth distributions
    with poor implementations of Object#hashCode().  (Radim Kolar via cutting)

    MAPREDUCE-5232. Add a configuration to be able to log classpath and other
    system properties on mapreduce JVMs startup.  (Sangjin Lee via vinodkv)

    MAPREDUCE-5910. Make MR AM resync with RM in case of work-preserving
    RM-restart. (Rohith via jianhe)

    MAPREDUCE-2841. Add a native implementation of MapOutputCollector.
    (see section below for detailed breakdown)

  IMPROVEMENTS

    MAPREDUCE-3481. [Gridmix] Improve Gridmix STRESS mode. (amarrk)

    MAPREDUCE-3597. [Rumen] Rumen should provide APIs to access all the
                    job-history related information.

    MAPREDUCE-3375. [Gridmix] Memory Emulation system tests.
                    (Vinay Thota via amarrk)

    MAPREDUCE-2733. [Gridmix] Gridmix3 cpu emulation system tests.
                    (Vinay Thota via amarrk)
